# RAST-CLI

./: .env.example  .gitignore  README.md  install.py  pyproject.toml  requirements.txt
rast_cli/: __init__.py  __main__.py  agent.py  cli.py  commands.py  config.py  ui.py
rast_cli/integrations/: __init__.py  github.py  gmail.py
rast_cli/providers/: __init__.py  base.py  ollama.py  openrouter.py
rast_cli/tools/: __init__.py  builtin.py  registry.py
