[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rast-cli"
version = "0.1.0"
description = "Rast-CLI: an autonomous, agentic terminal AI coding assistant inspired by Claude Code."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Rast-CLI" }]
dependencies = [
    "rich>=13.7.0",
    "requests>=2.31.0",
    "prompt_toolkit>=3.0.43",
]

[project.scripts]
rash = "rast_cli.cli:main"
rast = "rast_cli.cli:main"
rast-cli = "rast_cli.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["rast_cli*"]
